# B2-algo-explorer

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  sortingvisualizer.cpp  sortingvisualizer.h
